--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -8,8 +8,6 @@
 
 {{- $gpgpath := promptStringOnce . "gpgpath" "Path of gpg.exe" -}}
 
-{{- $condapath := promptStringOnce . "condapath" "Conda directory" -}}
-
 {{- $npmcache := promptStringOnce . "npmcache" "Directory for NPM cache" -}}
 
 {{- $npmprefix := promptStringOnce . "npmprefix" "Directory where the node executable is installed" -}}
@@ -45,13 +43,11 @@ encryption = "gpg"
     email = "{{ $email }}"
     gpgkey = "{{ $gpgkey }}"
     gpgpath = "{{ $gpgpath }}"
-    condapath = "{{ $condapath }}"
     npmcache = '{{ $npmcache }}'
     npmprefix = '{{ $npmprefix }}'
     # Must use '/' to avoid Go doubling '\'
     nugetpkgs = "{{ $nugetpkgs }}"
     rworkingdir = "{{ $rworkingdir }}"
-    mavendir = "{{ $mavendir }}"
     sparkdir = "{{ $sparkdir }}"
     cmdstandir = "{{ $cmdstandir }}"
     quartopath = "{{ $quartopath }}"
@@ -71,7 +67,7 @@ encryption = "gpg"
 [gpg]
     recipient = "{{ $gpgrecipient }}"
 [interpreters.py]
-    command = "{{ $condapath }}/python.exe"
+    command = {{env "APPDATA"}}\uv\python\cpython-3.12.7-windows-x86_64-none/python.exe
 [interpreters.ps1]
     command = "pwsh"
     args = ["-NoLogo"]
