--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -67,7 +67,7 @@ encryption = "gpg"
 [gpg]
     recipient = "{{ $gpgrecipient }}"
 [interpreters.py]
-    command = {{env "APPDATA"}}\uv\python\cpython-3.12.7-windows-x86_64-none/python.exe
+    command = {{ $top:= env "APPDATA" | replaceAllRegex "\\\\" "/" }}{{ list $top "uv" "python" "cpython-3.12.7-windows-x86_64-none/python.exe" | join "/" | quote}}
 [interpreters.ps1]
     command = "pwsh"
     args = ["-NoLogo"]
