--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Fastverse Dark Italic",
+    "editor_theme": "Vibrant Ink",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -42,9 +42,9 @@
     "font_size_points": 12,
     "help_font_size_points": 12,
     "pdf_previewer": "none",
-    "source_with_echo": true,
     "default_latex_program": "XeLaTeX",
     "graphics_backend": "ragg",
     "global_theme": "alternate",
-    "insert_native_pipe_operator": true
+    "insert_native_pipe_operator": true,
+    "source_with_echo": true
 }
