--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -39,12 +39,13 @@
     "visual_markdown_editing_show_margin": true,
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
-    "font_size_points": 12,
-    "help_font_size_points": 12,
     "pdf_previewer": "none",
     "default_latex_program": "XeLaTeX",
     "graphics_backend": "ragg",
     "global_theme": "alternate",
     "insert_native_pipe_operator": true,
-    "source_with_echo": true
+    "source_with_echo": true,
+    "sync_files_pane_working_dir": true,
+    "reformat_on_save": true,
+    "code_formatter": "styler"
 }
