--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -192,6 +192,7 @@
     map-styles = bold purple => syntax magenta, bold cyan => syntax blue
 [tag]
     sort = version:refname
+    gpgsign = true
 [commit]
     gpgsign = true
 [gpg]
