--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -234,7 +234,7 @@ if ($env:TERM_PROGRAM -eq 'vscode') { . "$(code --locate-shell-integration-path 
 
 Import-Module Microsoft.PowerShell.SecretStore, Microsoft.PowerShell.SecretManagement
 
-$env:Path += ';D:\Apps\Quarto\bin;D:\Apps\Quarto\bin\tools;D:\Apps\Ollama'
+$env:Path += ';D:\Apps\Ollama'
 if (Test-Path Env:/SPARK_HOME) {
     $env:Path += ";$(Join-Path $env:SPARK_HOME bin)"
 }
@@ -278,15 +278,25 @@ function uvrn() {
 # Do not want venv prepending env name to prompt!
 $env:VIRTUAL_ENV_DISABLE_PROMPT = 1
 
+$Global:__envFolder = $null
+
 $Global:__locationChangedHandler = [EventHandler[LocationChangedEventArgs]] {
     param([object] $source, [LocationChangedEventArgs] $locChangedEventArgs)
     end {
         [System.Management.Automation.PathInfo] $oldPath = $locChangedEventArgs.OldPath
         [System.Management.Automation.PathInfo] $newPath = $locChangedEventArgs.NewPath
         Write-Debug "Old '$oldPath' New '$newPath'"
-        if ($newPath.Provider.Name -eq 'FileSystem') {
+        if ($newPath.Provider.Name -ne 'FileSystem') {
+            return
+        }
+
+        if ($Global:__envFolder -and $newPath.Path.StartsWith($Global:__envFolder)) {
+            Write-Debug 'Skipping check because new folder is subfolder of env path.'
+        } else {
             $envFile = Join-Path $newPath '.env'
             if (Test-Path $envFile) {
+                $Global:__envFolder = $newPath.Path
+
                 Get-Content $envFile | ForEach-Object {
                     $line = $_.Trim()
                     if ($line -and $line -notlike '#*') {
@@ -297,12 +307,11 @@ $Global:__locationChangedHandler = [EventHandler[LocationChangedEventArgs]] {
                     }
                 }
             }
+        }
+        $psScript = [System.IO.Path]::Combine($newPath, '.venv', 'Scripts', 'Activate.ps1')
 
-            $psScript = [System.IO.Path]::Combine($newPath, '.venv', 'Scripts', 'Activate.ps1')
-
-            if (Test-Path $psScript) {
-                . $psScript
-            }
+        if (Test-Path $psScript) {
+            . $psScript
         }
     }
 }
