Move stack config.

--- a/home/dot_config/stack/config.yaml.tmpl
+++ b/home/dot_config/stack/config.yaml.tmpl
@@ -8,7 +8,7 @@
 # See https://docs.haskellstack.org/en/stable/yaml_configuration/#templates
 templates:
   params:
-    author-name: Ajay Mehta
+    author-name: {{ .name }}
 #    author-email:
 #    copyright:
     github-username: {{ .name }}
