--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -20,11 +20,30 @@ $GitPromptSettings.EnableStashStatus = $true
 
 #endregion
 
-Import-Module -Name pwshEmojiExplorer
+$PSStyle.Progress.UseOSCIndicator = $true
 
 if (!(Get-PSDrive -Name 'HKU' -ErrorAction Ignore)) {
     $null = New-PSDrive -Name 'HKU' -PSProvider Registry -Root 'HKEY_USERS'
 }
+
+#region PSReadLine
+
+# Either regular console or one created by PowerShell Extension
+# if ($host.Name -in 'ConsoleHost', 'Visual Studio Code Host') {
+if (!(Get-Module -Name PSReadLine)) {
+    Import-Module PSReadline
+}
+
+. "$PSScriptRoot\Scripts\PSReadLine\PSReadLineProfile.ps1"
+Import-Module -Name CompletionPredictor, DirectoryPredictor
+Set-PSReadLineOption -PredictionSource HistoryAndPlugin
+if (Test-Path env:\TERM_PROGRAM) {
+    Set-PSReadLineOption -HistorySaveStyle SaveNothing
+}
+
+# endregion
+
+Import-Module -Name pwshEmojiExplorer
 
 # PowerShell parameter completion shim for the dotnet CLI
 Register-ArgumentCompleter -Native -CommandName dotnet -ScriptBlock {
@@ -38,19 +57,7 @@ Register-ArgumentCompleter -Native -CommandName dotnet -ScriptBlock {
 Get-ChildItem "$PSScriptRoot\Scripts\ArgumentCompleters\*.ps1" | ForEach-Object { . $_ }
 
 
-$PSStyle.Progress.UseOSCIndicator = $true
-
-#region PSReadLine
-
-# Either regular console or one created by PowerShell Extension
-# if ($host.Name -in 'ConsoleHost', 'Visual Studio Code Host') {
-if (!(Get-Module -Name PSReadLine)) {
-    Import-Module PSReadline
-}
-
-. "$PSScriptRoot\Scripts\PSReadLine\PSReadLineProfile.ps1"
-Import-Module -Name CompletionPredictor, DirectoryPredictor
-Set-PSReadLineOption -PredictionSource HistoryAndPlugin
+# region oh-my-posh
 
 function Set-EnvVar([bool]$originalStatus) {
     $env:POSH = if (-not (Get-Module -Name PSReadLine)) {
@@ -106,10 +113,6 @@ function Set-PoshPrompt {
         (@(oh-my-posh init pwsh --config="$Theme" --print) -join "`n") | Invoke-Expression
 
     New-Alias -Name 'Set-PoshContext' -Value 'Set-EnvVar' -Scope Global -Force
-}
-
-if (Test-Path env:\TERM_PROGRAM) {
-    Set-PSReadLineOption -HistorySaveStyle SaveNothing
 }
 
 Set-PoshPrompt -Theme '~\oh-my-posh\cool.omp.json'
