Add delta themes.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -18,6 +18,7 @@
 [include]
     path = themes.gitconfig
     path = delta.gitconfig
+    path = darcubox.gitconfig
     path = maintenance.gitconfig
 [pretty]
     extended = format:%C(bold blue)%h% C(dim white)- %an %C(bold green)%ad%C(auto)%d%n %C(bold white)%s
