--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -183,6 +183,8 @@
     features = default sideways
     navigate = true
     hyperlinks = true
+    map-styles = bold purple => syntax magenta, bold cyan => syntax blue
+    true-color = always
 [tag]
     sort = version:refname
     gpgsign = true
