--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -1,3 +1,5 @@
+PATH="${RTOOLS45_HOME}\usr\bin;${RTOOLS45_HOME}\ucrt64\bin;${RTOOLS45_HOME}\mingw64\bin;${PATH}"
+
 plotly_username={{- (keepassxc "PLOTLY").UserName }}
 plotly_api_key={{- (keepassxc "PLOTLY").Password }}
 
