Update RStudio preferences.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Fastverse Dark Magenta",
+    "editor_theme": "Material Palenight {rsthemes}",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -45,7 +45,12 @@
     "global_theme": "alternate",
     "insert_native_pipe_operator": true,
     "source_with_echo": true,
-    "sync_files_pane_working_dir": true,
     "reformat_on_save": true,
-    "code_formatter": "styler"
+    "code_formatter": "external",
+    "show_help_tooltip_on_idle": true,
+    "code_formatter_external_command": "D:/Apps/CLI/air.exe",
+    "copilot_enabled": true,
+    "copilot_indexing_enabled": true,
+    "copilot_completions_trigger": "manual",
+    "editor_line_height": 100
 }
