Update git maintenance settings.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -243,6 +243,14 @@
     enabled = true
 [maintenance "pack-refs"]
     enabled = true
+[maintenance "reflog-expire"]
+    enabled = true
+    schedule = weekly
+[maintenance "rerere-gc"]
+    enabled = true
+    schedule = weekly
+[maintenance "worktree-prune"]
+    enabled = true
 [credential]
     helper = C:/Program\\ Files/Git/mingw64/bin/git-credential-manager.exe
 [credential "https://github.com"]
