--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -56,7 +56,8 @@ encryption = "gpg"
 [completion]
     custom = true
 [diff]
-    pager = "less -rFX"
+    pager = "less"
+	pagerArgs = "-rFX"
     command = 'delta'
 [edit]
     command = 'C:/Program Files/Notepad++/Notepad++.exe'
