--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -124,18 +124,6 @@ Set-PoshPrompt -Theme '~\oh-my-posh\cool.omp.json'
 
 # $env:FZF_DEFAULT_COMMAND = 'rg --files . 2> nul'
 
-# junegunn/seoul256.vim (light)
-
-#'--color=bg+:#D9D9D9,bg:#E1E1E1,border:#C8C8C8,spinner:#719899,hl:#719872,fg:#616161,header:#719872,info:#727100,pointer:#E12672,marker:#E17899,fg+:#616161,preview-bg:#D9D9D9,prompt:#0099BD,hl+:#719899 --highlight-line'
-
-# morhetz/gruvbox
-
-#'--color=bg+:#3c3836,bg:#32302f,spinner:#fb4934,hl:#928374,fg:#ebdbb2,header:#928374,info:#8ec07c,pointer:#fb4934,marker:#fb4934,fg+:#ebdbb2,prompt:#fb4934,hl+:#fb4934 --highlight-line'
-
-# tomasr/molokai
-
-#'--color=bg+:#293739,bg:#1B1D1E,border:#808080,spinner:#E6DB74,hl:#7E8E91,fg:#F8F8F2,header:#7E8E91,info:#A6E22E,pointer:#A6E22E,marker:#F92672,fg+:#F8F8F2,prompt:#F92672,hl+:#F92672 --highlight-line'
-
 
 function ifind() {
     fd | fzf --prompt 'All> ' --header 'CTRL-D: Directories / CTRL-F: Files' --bind 'ctrl-d:change-prompt(Directories> )+reload(fd --glob  * --type d)' --bind 'ctrl-f:change-prompt(Files> )+reload(fd --glob * --type f)'
@@ -155,7 +143,7 @@ function rfv {
     }
 
     $bind = "--bind 'start:$reload' --bind 'change:$reload' --bind 'ctrl-o:execute:code --goto {1}:{2}:{3}'"
-    $cmd = "fzf --disabled --ansi $bind --delimiter :$previewCmd"
+    $cmd = "fzf --disabled --header 'CTRL-O: Open in VS Code' --ansi $bind --delimiter :$previewCmd"
     $result = Invoke-Expression -Command $cmd
     if ($result) {
         $parts = $result -split ':', 4
@@ -190,7 +178,7 @@ $setPsFzfOptionSplat = @{
 }
 Set-PsFzfOption @setPsFzfOptionSplat
 
-Set-Alias -Name 'ipfr' -Value Invoke-PsFzfRipgrep
+Set-Alias -Name 'fr' -Value Invoke-PsFzfRipgrep
 
 # Use Ctrl+g, Ctrl+b for git branches
 # Use Ctrl+g, Ctrl+f for git files
@@ -244,6 +232,7 @@ Register-ArgumentCompleter -Native -CommandName winget -ScriptBlock {
 # Zoxide
 
 Invoke-Expression (& { zoxide init powershell | Out-String })
+
 # cd + custom logic based on the value of _ZO_ECHO.
 function global:__zoxide_cd {
     [Diagnostics.CodeAnalysis.SuppressMessageAttribute('PSAvoidUsingCmdletAliases', '', Justification = 'Required.')]
