Add utility scripts + update profile.

--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -120,7 +120,7 @@ Set-PoshPrompt -Theme '~\oh-my-posh\cool.omp.json'
 
 #region fzf
 
-# fzf by default binds CTRL-/ and ALT-/ to toggle-wrap
+. "$PSScriptRoot\Scripts\Set-FzfTheme.ps1"
 
 # $env:FZF_DEFAULT_COMMAND = 'rg --files . 2> nul'
 
