--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -26,3 +26,6 @@ LC_NUMERIC=English_United States.utf8
 LC_TIME=English_United States.utf8
 
 OPENAI_API_KEY="{{- (keepassxc "OPENAI_API_KEY").Password }}"
+
+# https://joshuamarie.com/posts/05-pipes/#the-native-pipe-r-v4.1-2021
+_R_USE_PIPEBIND_=true
